# retail-lakehouse-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dbt.txt  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
adf/: README.md
adf/arm/: parameters.dev.json
adf/dataset/: DS_ADLS_Parquet.json  DS_Postgres_Table.json  DS_Source_CSV.json  DS_Source_JSON.json
adf/linkedService/: LS_ADLS_Raw.json  LS_AzureKeyVault.json  LS_PostgreSQL_Retail.json
adf/pipeline/: PL_Ingest_File_Source.json  PL_Ingest_PostgreSQL_Table.json  PL_Master_Ingestion.json
adf/trigger/: TR_Daily_Ingestion.json
airflow/: .airflowignore  Dockerfile  README.md
airflow/dags/: retail_daily_pipeline.py  retail_health_check.py  retail_platform_setup.py
airflow/include/: task_commands.py
config/: adf_ingestion.yaml  data_generation.yaml  file_sources.yaml  gold_models.yaml  postgres_tables.yaml  silver_transforms.yaml  snowflake_load.yaml
data/file_sources/: .gitkeep
data/samples/: .gitkeep  customers.csv  order_items.csv  orders.csv  payments.csv  products.csv
db/init/: 01_schema.sql  02_airflow_db.sql
dbt/: README.md  dbt_project.yml
dbt/macros/: business_rules.sql
dbt/profiles/: profiles.yml
docs/: architecture.md  phase2-adf-ingestion.md  phase4-silver-transforms.md  phase5-gold-models.md  phase6-snowflake-load.md  phase7-dbt-models.md  phase8-airflow-orchestration.md  phase9-testing-cicd-docs.md
docs/runbooks/: reconciliation.md  (+3 more)
scripts/: generate_data.py  generate_file_sources.py  load_postgres.py  run_ci_local.py  run_dbt_models.py  run_gold_models.py  run_local_ingestion.py  run_reconciliation.py  run_silver_transforms.py  run_snowflake_load.py  setup_dbt_schemas.py  setup_snowflake.py  validate_dbt.py  validate_gold.py  validate_phase1.py  validate_phase2.py  validate_silver.py  validate_snowflake.py
tests/: conftest.py
(+95 files in other folders)
